Ya funciona el registro de nuevos pacientes

--- a/app/src/main/res/layout/activity_registro_pacientes.xml
+++ b/app/src/main/res/layout/activity_registro_pacientes.xml
@@ -28,7 +28,6 @@
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
                 android:ems="10"
-                android:fontFamily="@font/raleway_extrabold_italic"
                 android:inputType="text"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -62,22 +61,19 @@
                 android:text="Número de cama"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/txtTipoSangreSolicitud"
+                app:layout_constraintBottom_toTopOf="@+id/txtNumeroCama"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtNumeroHabitacion" />
 
             <EditText
-                android:id="@+id/txtTipoSangreSolicitud"
+                android:id="@+id/txtNumeroCama"
                 android:layout_width="360dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
-                android:clickable="false"
                 android:ems="10"
-                android:focusable="false"
-                android:fontFamily="@font/raleway_extrabold_italic"
-                android:inputType="none"
-                android:textColorHint="@color/black"
+                android:inputType="number"
+                android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
@@ -103,12 +99,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
-                android:clickable="false"
                 android:ems="10"
-                android:focusable="false"
-                android:fontFamily="@font/raleway_extrabold_italic"
-                android:inputType="none"
-                android:textColorHint="@color/black"
+                android:inputType="text"
+                android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -135,12 +128,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
-                android:clickable="false"
                 android:ems="10"
-                android:focusable="false"
-                android:fontFamily="@font/raleway_extrabold_italic"
-                android:inputType="phone"
-                android:textColorHint="@color/black"
+                android:inputType="text"
+                android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -182,12 +172,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
-                android:clickable="false"
                 android:ems="10"
-                android:focusable="false"
-                android:fontFamily="@font/raleway_extrabold_italic"
-                android:inputType="textEmailAddress"
-                android:textColorHint="@color/black"
+                android:inputType="number"
+                android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -199,11 +186,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
-                android:clickable="false"
                 android:ems="10"
-                android:focusable="false"
-                android:fontFamily="@font/raleway_extrabold_italic"
-                android:inputType="date"
+                android:inputType="number"
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -222,7 +206,7 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtFechaIngreso"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtTipoSangreSolicitud" />
+                app:layout_constraintTop_toBottomOf="@+id/txtNumeroCama" />
 
             <EditText
                 android:id="@+id/txtFechaIngreso"
@@ -232,11 +216,12 @@
                 android:layout_marginBottom="7dp"
                 android:background="@drawable/ic_edittext_background"
                 android:ems="10"
-                android:fontFamily="@font/raleway_extrabold_italic"
                 android:gravity="start|top"
-                android:inputType="text"
                 android:textColor="#000000"
                 android:textSize="16sp"
+                android:inputType="date"
+                android:focusable="false"
+                android:clickable="false"
                 app:layout_constraintBottom_toTopOf="@+id/btnEnviarFormulario"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
