--- a/app/src/main/res/layout/activity_card_pacientes.xml
+++ b/app/src/main/res/layout/activity_card_pacientes.xml
@@ -51,7 +51,7 @@
                 app:layout_constraintVertical_bias="0.093" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/btnBorrar"
                 android:layout_width="50dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="12dp"
@@ -60,13 +60,13 @@
                 tools:layout_editor_absoluteY="21dp" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/btnEditar"
                 android:layout_width="50dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.304"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/btnBorrar"
                 app:srcCompat="@drawable/ic_edit"
                 tools:layout_editor_absoluteY="21dp" />
 
@@ -81,7 +81,7 @@
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/imageView"
+                app:layout_constraintEnd_toStartOf="@+id/btnBorrar"
                 app:layout_constraintHorizontal_bias="0.571"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtPacienteNombre" />
