Agregamos últimos detalles

--- a/app/src/main/res/layout/activity_editar_paciente.xml
+++ b/app/src/main/res/layout/activity_editar_paciente.xml
@@ -96,7 +96,9 @@
                 android:layout_width="203dp"
                 android:layout_height="33dp"
                 android:hint="Fecha de ingreso"
-                android:inputType="text"
+                android:inputType="date"
+                android:focusable="false"
+                android:clickable="false"
                 android:paddingBottom="4dp"
                 android:textColor="@color/black"
                 android:textSize="18sp"
