--- a/app/src/main/res/layout/activity_asignar_medicamentos.xml
+++ b/app/src/main/res/layout/activity_asignar_medicamentos.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/ic_edittext_background"
         android:ems="10"
+        android:hint="00:00 P.M./A.M."
         android:inputType="text"
         android:textColor="#000000"
         android:textSize="16sp"
